Fix deprecated wrapper class constructors (Integer, Long, Double, Boolean)
Co-authored-by: MichaelBischoffArvato <36196361+MichaelBischoffArvato@users.noreply.github.com>